--- a/package.json
+++ b/package.json
@@ -4,12 +4,50 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "npm run manifest && next build",
+    "start": "next start",
+    "static": "npm run manifest && next build && next export && cd out && npx serve",
+    "manifest": "ts-node ./lib/getMetadata.ts",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "copy": "ts-node ./lib/copyAssets.ts"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/server": "^11.0.0",
+    "@emotion/styled": "^11.3.0",
+    "graphql": "^15.5.0",
     "next": "^10.0.0",
+    "nextjs-breadcrumbs": "^0.9.9",
+    "normalize.css": "^8.0.1",
+    "open-color": "^1.8.0",
+    "preact": "^10.5.13",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@emotion/babel-plugin": "^11.3.0",
+    "@graphql-codegen/cli": "1.21.3",
+    "@graphql-codegen/introspection": "1.18.1",
+    "@graphql-codegen/typescript": "1.21.1",
+    "@graphql-codegen/typescript-operations": "1.17.15",
+    "@types/react": "^17.0.3",
+    "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-twin": "^1.0.2",
+    "chalk": "^4.1.0",
+    "dotenv-webpack": "^7.0.2",
+    "fs": "0.0.1-security",
+    "fs-extra": "^9.1.0",
+    "isomorphic-fetch": "^3.0.0",
+    "slugify": "^1.5.0",
+    "tailwindcss": "^2.1.1",
+    "ts-node": "^9.1.1",
+    "twin.macro": "^2.3.3",
+    "typescript": "^4.2.4"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
   }
 }
