--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "static": "npm run manifest && next build && next export && cd out && npx serve",
     "manifest": "ts-node ./lib/getMetadata.ts",
     "codegen": "graphql-codegen --config codegen.yml",
-    "copy": "ts-node ./lib/copyAssets.ts"
+    "copy": "ts-node ./lib/copyAssets.ts",
+    "lint": "eslint \"**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.3.0",
+    "eslint-config-next": "^12.0.3",
     "graphql": "^15.5.0",
     "next": "^10.0.0",
     "nextjs-breadcrumbs": "^0.9.9",
@@ -32,10 +34,14 @@
     "@graphql-codegen/typescript": "1.21.1",
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-twin": "^1.0.2",
     "chalk": "^4.1.0",
     "dotenv-webpack": "^7.0.2",
+    "eslint": "^8.2.0",
+    "eslint-plugin-react": "^7.27.0",
     "fs": "0.0.1-security",
     "fs-extra": "^9.1.0",
     "isomorphic-fetch": "^3.0.0",
