--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.3.0",
+    "dedent": "^0.7.0",
     "eslint-config-next": "^12.0.3",
     "graphql": "^15.5.0",
     "next": "^10.0.0",
