--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.3.0",
+    "@preact/compat": "^17.1.2",
     "dedent": "^0.7.0",
     "eslint-config-next": "^12.0.3",
     "graphql": "^15.5.0",
-    "next": "^10.0.0",
+    "next": "12",
+    "next-plugin-preact": "^3.0.7",
     "nextjs-breadcrumbs": "^0.9.9",
     "normalize.css": "^8.0.1",
     "open-color": "^1.8.0",
@@ -34,7 +36,7 @@
     "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/typescript": "1.21.1",
     "@graphql-codegen/typescript-operations": "1.17.15",
-    "@types/react": "^17.0.3",
+    "@types/react": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "babel-plugin-macros": "^3.0.1",
